tests/extensions/include/errors/variables.sieve
require "include";
require "variables";

# Importing unknown variable
import "frop";

# Importing unknown variable
import ["friep", "frml"];

# Not an error
export ["friep"];

import "friep";

keep;

export "friep";

